# udp_duplex

./: CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/: toolchain-elf2x68k.cmake
src/: Makefile  udp_duplex.c
